Add team members

--- a/source/team.html
+++ b/source/team.html
@@ -9,6 +9,66 @@ title: Team | Data Collaboratives
   </div>
 
 
+  <div class="team-page__container">
+    <div class="divider">
+      <h1>Project Leads</h1>
+    </div>
+    <div class="team-page__member">
+      <div class="row large-unstack">
+        <div class="small-4 column">
+          <div class="team-page__image" style="background-image: url('/images/team/stefaan-verhulst.jpg')">
+
+          </div>
+        </div>
+        <div class="column">
+          <div class="team-page__bio">
+            <h3>Stefaan Verhulst</h3>
+            <h5>Lead</h5>
+            <p>
+              Stefaan G. Verhulst is Co-Founder and Chief Research and Development Officer of the Governance Laboratory @NYU (GovLab) where he is responsible for building a research foundation on how to transform governance using advances in science and technology. Verhulst’s latest scholarship centers on how technology can improve people’s lives and the creation of more effective and collaborative forms of governance. Specifically, he is interested in the perils and promise of collaborative technologies and how to harness the unprecedented volume of information to advance the public good.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="team-page__member">
+      <div class="row large-unstack">
+        <div class="small-4 column">
+          <div class="team-page__image" style="background-image: url('/images/team/stefaan-verhulst.jpg')">
+
+          </div>
+        </div>
+        <div class="column">
+          <div class="team-page__bio">
+            <h3>Andrew Young</h3>
+            <h5>Co-Lead</h5>
+            <p>
+              Andrew Young is the Associate Director of Research at The GovLab, where he leads research efforts focusing on the impact of technology on public institutions. Among the grant-funded projects he has directed are a global assessment of the impact of open government data; comparative benchmarking of government innovation efforts against those of other countries; and crafting the experimental design for testing the adoption of technology innovations in federal agencies.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="team-page__member">
+      <div class="row large-unstack">
+        <div class="small-4 column">
+          <div class="team-page__image" style="background-image: url('/images/team/stefaan-verhulst.jpg')">
+
+          </div>
+        </div>
+        <div class="column">
+          <div class="team-page__bio">
+            <h3>Natalia Adler</h3>
+            <h5>UNICEF Data Collaboratives Lead</h5>
+            <p>
+              As a ‘development entrepreneur,’ Natalia Adler has been looking for ways to “do development differently” for the past 11 years. She’s currently serving as the Data, Research and Policy Planning Specialist at UNICEF HQ, where she’s trying to leverage data science to solve complex problems affecting children through data collaboratives with the private sector and academia. She has recently supported UNICEF’s regional office in Latin America to develop a "Cities for Children" initiative, looking at the intersection of urbanization, climate change and child rights in Latin America. In Nicaragua, she pioneered design thinking to support the development of Regional Policies for Children and partnered with the private sector to create 'entrepreneurial ecosystems.' In Mozambique, she broadened the intersection of child rights and Public Finance Management. A natural of Brazil, Natalia opened  her own business at the age of 14.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
 
 
