Add development section

--- a/source/team.html
+++ b/source/team.html
@@ -16,9 +16,7 @@ title: Team | Data Collaboratives
     <div class="team-page__member">
       <div class="row large-unstack">
         <div class="small-4 column">
-          <div class="team-page__image" style="background-image: url('/images/team/stefaan-verhulst.jpg')">
-
-          </div>
+          <div class="team-page__image" style="background-image: url('/images/team/stefaan-verhulst.jpg')"></div>
         </div>
         <div class="column">
           <div class="team-page__bio">
@@ -34,9 +32,7 @@ title: Team | Data Collaboratives
     <div class="team-page__member">
       <div class="row large-unstack">
         <div class="small-4 column">
-          <div class="team-page__image" style="background-image: url('/images/team/stefaan-verhulst.jpg')">
-
-          </div>
+          <div class="team-page__image" style="background-image: url('/images/team/andrew-young.jpg')"></div>
         </div>
         <div class="column">
           <div class="team-page__bio">
@@ -52,9 +48,7 @@ title: Team | Data Collaboratives
     <div class="team-page__member">
       <div class="row large-unstack">
         <div class="small-4 column">
-          <div class="team-page__image" style="background-image: url('/images/team/stefaan-verhulst.jpg')">
-
-          </div>
+          <div class="team-page__image" style="background-image: url('/images/team/natalia-adler.png')"></div>
         </div>
         <div class="column">
           <div class="team-page__bio">
@@ -62,6 +56,25 @@ title: Team | Data Collaboratives
             <h5>UNICEF Data Collaboratives Lead</h5>
             <p>
               As a ‘development entrepreneur,’ Natalia Adler has been looking for ways to “do development differently” for the past 11 years. She’s currently serving as the Data, Research and Policy Planning Specialist at UNICEF HQ, where she’s trying to leverage data science to solve complex problems affecting children through data collaboratives with the private sector and academia. She has recently supported UNICEF’s regional office in Latin America to develop a "Cities for Children" initiative, looking at the intersection of urbanization, climate change and child rights in Latin America. In Nicaragua, she pioneered design thinking to support the development of Regional Policies for Children and partnered with the private sector to create 'entrepreneurial ecosystems.' In Mozambique, she broadened the intersection of child rights and Public Finance Management. A natural of Brazil, Natalia opened  her own business at the age of 14.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="divider">
+      <h1>Project Development</h1>
+    </div>
+    <div class="team-page__member">
+      <div class="row large-unstack">
+        <div class="small-4 column">
+          <div class="team-page__image" style="background-image: url('/images/team/christopher-wong.jpg')"></div>
+        </div>
+        <div class="column">
+          <div class="team-page__bio">
+            <h3>Christopher Wong</h3>
+            <h5>Director of Product</h5>
+            <p>
+              Christopher Wong is Director of Product at the GovLab. Christopher joined the GovLab after serving as a White House Presidential Innovation Fellow, where he worked with the US Patent and Trademark Office to deliver on the White House's Executive Action to better utilize crowdsourcing as a mechanism for improving patent quality. Christopher was previously the Executive Director of the Engelberg Center on Innovation Law & Policy at NYU School of Law, as well as a Visiting Fellow at both the Yale Law School Information Society Project and the Princeton University Center for Information Technology.
             </p>
           </div>
         </div>
