--- a/source/introduction.html
+++ b/source/introduction.html
@@ -8,7 +8,7 @@ subtitle:
 <div id="introduction">
 
   <div class="row expanded align-right" id="download-container">
-    <a href="#" target="_blank" id="intro-button" class="button"><i class="material-icons m-space">file_download</i> Download the PDF</a>
+    <a href="{{'/static/files/data-collaboratives-intro.pdf' | relative_url }}" target="_blank" id="intro-button" class="button"><i class="material-icons m-space">file_download</i> Download the PDF</a>
   </div>
 
   <div id="fullpage">
