--- a/source/introduction.html
+++ b/source/introduction.html
@@ -114,13 +114,13 @@ subtitle:
     </div>
 
 
-    <div class="section " id="designing">
+    <div class="section " id="section-9-designing">
       <img src="/images/slides/slide022.jpg" id="slide022" alt="slide022" />
     </div>
-    <div class="section " id="framework">
+    <div class="section " id="section-10-framework">
       <img src="/images/slides/slide023.jpg" id="slide023" alt="slide023" />
     </div>
-    <div class="section " id="learn-more">
+    <div class="section " id="section-11-learn-more">
       <img src="/images/slides/slide024.jpg" id="slide024" alt="slide024" />
     </div>
   </div>
