--- a/source/explorer.html
+++ b/source/explorer.html
@@ -39,7 +39,7 @@ custom_js: listScripts.js
 
 <div class="list-page">
   <div class="top-section top-section--yellow-list-page">
-    <h2 class="top-section__list-header">All Data Collaborative Cases</h2>
+    <h2 class="top-section__list-header">DATA COLLABORATIVES EXPLORER</h2>
   </div>
 
   <div class="page-section page-section--gray">
