Add videos and imgs

--- a/source/index.html
+++ b/source/index.html
@@ -6,8 +6,8 @@ subtitle:
 
 <main role="main"> <!-- main content starts here -->
 
-<section class="top-section top-section--bg" style="background-image: url(/images/bgs/making-it-work.jpg);'" >
-  <!-- <video class="video-bg__video" src="images/18294259.mp4" autoplay loop></video> -->
+<section class="top-section top-section--bg" style="background-image: url(/images/video/long-img.png);'" >
+  <!-- <video class="video-bg__video" height="300" src="images/video/long-video.webm" autoplay loop></video> -->
   <div class="top-section__band">
     <div class="row align-center">
       <div class="medium-10 column">
