Add footer txt and fix dropdown typo

--- a/source/explorer.html
+++ b/source/explorer.html
@@ -20,7 +20,7 @@ sector:
 - "Environment"
 - "Health"
 - "Infrastructure"
-- "Transporation"
+- "Transportation"
 - "Telecommunications"
 type:
 - "API"
