Add next phase links

--- a/source/canvas.html
+++ b/source/canvas.html
@@ -7,7 +7,7 @@ layout: default
 
 <div class="canvas-page">
 
-  <!-- Standalonetitle slider -->
+  <!-- Standalone title slider -->
   <div class="top-section top-section--yellow">
     <!-- <h1>{{ page.phaseTitle }}</h1> -->
     <div class="phase-title">
@@ -18,7 +18,7 @@ layout: default
       </h1>
     </div>
   </div>
-  <!-- End Standalonetitle slider -->
+  <!-- End Standalone title slider -->
 
 <!-- INDIVIDUAL PHASES -->
 
@@ -112,7 +112,33 @@ layout: default
         </div>
       </div>
     {% endfor %} <!-- phase loop end -->
+
+
+    {% assign nextPhase = canvas[forloop.index] %}<!-- next phase nav -->
+    {% assign canvasLength = canvas | size %}
+
+    {% if forloop.index != canvasLength %}
+    <div class='divider phase-next'>
+      <div class="phase-next-wrapper row align-right">
+        <a class="next-phase" data-phase-target="#{{ nextPhase.phaseNumber | slugify }}">
+          <span>Next</span>
+          <h4 class="phase-next-title">{{ nextPhase.phaseNumber }}: {{ nextPhase.phaseTitle }}<i class="material-icons">keyboard_arrow_right</i></h4>
+        </a>
+      </div>
+    </div>
+    {% else %}
+    <div class='divider phase-next'>
+      <div class="phase-next-wrapper row align-right">
+        <a class="next-phase" data-phase-target="#{{ canvas[0].phaseNumber | slugify }}">
+          <span>Back</span>
+          <h4 class="phase-next-title">{{ canvas[0].phaseNumber }}: {{ canvas[0].phaseTitle }}</h4>
+        </a>
+      </div>
+    </div>
+    {% endif %}<!-- next phase nav end-->
+
   </div><!-- phase end -->
 {% endfor %}<!-- canvas loop end -->
+
 
 </div>
