Index txt and link fix and markdownify event sessions

--- a/source/index.html
+++ b/source/index.html
@@ -23,7 +23,7 @@ subtitle:
 <section class="page-section callout-message">
 <div class="row align-center expanded">
   <div class="large-10 column">
-    <h2>What is Data Collaboratives</h2>
+    <h2>What are Data Collaboratives</h2>
     <p>Data Collaboratives are a new form of collaboration, beyond the public-private partnership model, in which participants from different sectors — in particular companies -  exchange their data to create public value.</p>
   </div>
 </div>
@@ -115,7 +115,7 @@ subtitle:
 <section class="page-section callout-message">
   <div class="row align-center expanded">
     <div class="large-10 column">
-      <p><a href="{{ '/static/files/data-collaboratives.pdf' | relative_url }}" class="button">Learn More About Data Collaboratives</a></p>
+      <p><a href="{{ '/introduction.html' | relative_url }}" class="button">Learn More About Data Collaboratives</a></p>
     </div>
   </div>
 </section>
