Add media queries to vid

--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@ subtitle:
 
 <main role="main"> <!-- main content starts here -->
 
-<section class="top-section top-section--bg" style="background-color: transparent;'" >
+<section class="top-section top-section--bg" >
   <video class="video-bg__video" src="images/video/long-video.webm" autoplay loop></video>
   <div class="top-section__band">
     <div class="row align-center">
