Add framework page and fix header padding

--- a/source/team.html
+++ b/source/team.html
@@ -5,7 +5,7 @@ title: Team | Data Collaboratives
 
 <div class="team-page">
   <div class="top-section top-section--yellow">
-    <h2 class="top-section__list-header">Team</h2>
+    <h2 class="team-page__list-header">Team</h2>
   </div>
   <div class="team-page__container">
     <div class="divider">
