Add style to framework

--- a/source/framework.html
+++ b/source/framework.html
@@ -12,11 +12,19 @@ title: Data Responsibility Framework
   </div>
 
   <div class="page-section framework-page__message">
-    <p>
-      In order to mitigate risks across the data lifecycle, participants in Data Collaboratives should develop a Data Responsibility Framework. This page will offer research-based strategies for developing such a framework.
-    </p>
-    <p>
-      View the Data Responsibility Framework developed by the GovLab in partnership with the United Nations Office for the Coordination of <a href="http://www.unocha.org">Humanitarian Affairs (OCHA)</a>
-    </p>
+    <div class="row">
+      <div class="column">
+        <p>
+          In order to mitigate risks across the data lifecycle, participants in Data Collaboratives should develop a Data Responsibility Framework. This page will offer research-based strategies for developing such a framework.
+        </p>
+        <p>
+          View the Data Responsibility Framework developed by the GovLab in partnership with the <a class="framework-page__message--link" href="http://www.unocha.org" target="_blank">United Nations Office for the Coordination of Humanitarian Affairs (OCHA)</a>
+        </p>
+      </div>
+
+    </div>
+    <div class="row align-center">
+      <a class="button" href="{{ '/static/files/framework.pdf' | relative_url }}">View The Framework</a>
+    </div>
   </div>
 </div>
