--- a/source/index.html
+++ b/source/index.html
@@ -46,13 +46,14 @@ subtitle:
       <div class="bg-panel__content">
         <h3>Creating Public Value...</h3>
         <h4>Data collaboratives, when designed well, <br> can provide for better:</h4>
-        <ul>
-          <li><span class="button button--outline">Situational awareness and response</span></li>
-          <li><span class="button button--outline">Public service design and delivery</span></li>
-          <li><span class="button button--outline">Knowledge creation and transfer</span></li>
-          <li><span class="button button--outline">Prediction and forecasting</span></li>
-          <li><span class="button button--outline">Impact assessment and evaluation</span></li>
+        <ul class="blocked-list">
+          <li><span class="blocked-list__item">Situational awareness and response</span></li>
+          <li><span class="blocked-list__item">Public service design and delivery</span></li>
+          <li><span class="blocked-list__item">Knowledge creation and transfer</span></li>
+          <li><span class="blocked-list__item">Prediction and forecasting</span></li>
+          <li><span class="blocked-list__item">Impact assessment and evaluation</span></li>
         </ul>
+        <a href="{{ '/introduction.html#section5/5c' | relative_url }}" class="button button--outline">Learn More</a>
       </div>
     </div>
   </div>
