fix responsive details on index and canvas

--- a/source/index.html
+++ b/source/index.html
@@ -42,7 +42,7 @@ subtitle:
 
 <section id="creating-public-value" class="page-section bg-panel" style="background-image: url(/images/bgs/creating-public-value.jpg);'">
   <div class="row expanded collapse">
-    <div class="column large-6">
+    <div class="column large-6 small-12">
       <div class="bg-panel__content">
         <h3>Creating Public Value...</h3>
         <h4>Data collaboratives, when designed well, <br> can provide for better:</h4>
