--- a/source/index.html
+++ b/source/index.html
@@ -116,7 +116,7 @@ subtitle:
 <section class="page-section callout-message">
   <div class="row align-center expanded">
     <div class="large-10 column">
-      <p class="learn-more-btn"><a href="{{ '/introduction.html' | relative_url }}" class="button">Learn More About Data Collaboratives</a></p>
+      <p class="learn-more-btn"><a href="{{ '/introduction.html' | relative_url }}" class="button button--outline">Learn More About Data Collaboratives</a></p>
     </div>
   </div>
 </section>
