site review list except video fix

--- a/source/team.html
+++ b/source/team.html
@@ -98,6 +98,22 @@ title: Team | Data Collaboratives
     <div class="team-page__member">
       <div class="row large-unstack">
         <div class="small-4 column">
+          <div class="team-page__image" style="background-image: url('/images/team/mark-adkins-hastings.png')"></div>
+        </div>
+        <div class="column">
+          <div class="team-page__bio">
+            <h3>Mark Adkins-Hastings</h3>
+            <h5>Developer</h5>
+            <p>
+              Mark Adkins-Hastings is a software developer with diverse expertise in both technology and design. He joins GovLab's development and design team to build civic technologies that help institutions work more openly and collaboratively. Previously, Mark worked on citizen-centric technology projects for the United States federal government, including the Department of Justice and the Patent and Trademark Office (USPTO). At USTPO, he developed the Office's electronic patent application filing system as part of a team promoting the adoption of more agile and modern design practices, including the use of citizen ethnography to ensure that government websites serve the public better.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="team-page__member">
+      <div class="row large-unstack">
+        <div class="small-4 column">
           <div class="team-page__image" style="background-image: url('/images/team/claudio-mendonca.jpg')"></div>
         </div>
         <div class="column">
@@ -174,6 +190,38 @@ title: Team | Data Collaboratives
             <h5>Researcher</h5>
             <p>
               Prianka is a Research Intern at Govlab. She has a BA in Political Science and International Relations from the University of Melbourne and is currently enrolled in NYU’s joint Masters Program in Journalism and International Relations. Prior to enrolling at NYU, Prianka worked at a number of jobs in Melbourne, including managing a book store and serving as a Community Development Project Officer at the Asylum Seeker Welcome Centre, an organization that provides recreational, educational and social support for asylum seekers living in the Melbourne community. She also spent a year in Vanuatu, working as a Community Project Officer with the Marae Village Development Council. Among her projects was a post-disaster assessment report following Cyclone Luis which she researched, produced and edited.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="team-page__member">
+      <div class="row large-unstack">
+        <div class="small-4 column">
+          <div class="team-page__image" style="background-image: url('/images/team/greyson-nevins-archer.jpg')"></div>
+        </div>
+        <div class="column">
+          <div class="team-page__bio">
+            <h3>GREYSON NEVINS-ARCHER</h3>
+            <h5>UNDERGRADUATE RESEARCH ASSISTANT</h5>
+            <p>
+              Greyson Nevins-Archer is an Undergraduate Research Assistant at the GovLab. He is a senior pursuing a B.S. in Science and Technology at NYU Tandon School of Engineering. While Greyson has enjoyed learning to code and working with startups, he has found a newer passion in technology policy, social, and legal research as they relate to the Internet.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="team-page__member">
+      <div class="row large-unstack">
+        <div class="small-4 column">
+          <div class="team-page__image" style="background-image: url('/images/team/robert-montano.jpg')"></div>
+        </div>
+        <div class="column">
+          <div class="team-page__bio">
+            <h3>ROBERT MONTANO</h3>
+            <h5>GRADUATE RESEARCH ASSISTANT</h5>
+            <p>
+              Robert is a Research Assistant at GovLab. He has a BA in Political Science and International Relations from Fordham University and is currently a second-year MA Candidate in NYU's Department of International Relations. Before joining the GovLab team, Robert has worked for various humanitarian organizations, including the International Rescue Committee, the Center for International Health and Communication, and The Women's Islamic Initiative in Spirituality and Equality.
             </p>
           </div>
         </div>
