--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@ subtitle:
         <h1 class="top-section__logo" id="container"></h1>
         <img class="top-section__backup-logo" src="images/icosa-alpha.png"/>
         <img class="top-section__main-img" src="images/logo-data-collab-text.png">
-        <h5 class="top-section__sub-header">Creating Value by Exchanging Data</h5>
+        <h5 class="top-section__sub-header">Creating Public Value by Exchanging Data</h5>
       </div>
     </div>
   </div>
@@ -143,7 +143,7 @@ subtitle:
       <div class="checkerboard__content">
         <h6 class="checkerboard__header">Data Responsibility Framework</h6>
         <p class="checkerboard__main">Data Collaboratives do also introduce some level of risk. Learn more about risks across the data lifecycle and strategies for mitigating them with our <strong>Data Responsibility Framework</strong>.</p>
-        <p class="checkerboard__footer"><a href="{{ '/static/files/framework.pdf' | relative_url }}" class="button button--outline-dark">More</a></p>
+        <p class="checkerboard__footer"><a href="{{ '/framework.html' | relative_url }}" class="button button--outline-dark">More</a></p>
       </div>
     </div>
     <div class="column large-6">
