make video a little more flexible about playing at screen sizes close to 1280

--- a/source/index.html
+++ b/source/index.html
@@ -8,6 +8,7 @@ subtitle:
 
 <section class="top-section top-section--bg">
   <video class="video-bg__video" src="images/video/long-video.webm" autoplay loop></video>
+  <div class="top-section__under-video">&nbsp;</div>
   <div class="top-section__band">
     <div class="row align-center">
       <div class="medium-10 column">
