Add inline style to dropdowns on explorer

--- a/source/explorer.html
+++ b/source/explorer.html
@@ -211,3 +211,10 @@ custom_js: listScripts.js
     parameter = parameter.slice(-1).toString();
   }
 </script>
+
+<style media="screen">
+  select option {
+    background: white !important;
+    color: black !important;
+    }
+</style>
