--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@ subtitle:
 <main role="main"> <!-- main content starts here -->
 
 <section class="top-section top-section--bg">
-  <video class="video-bg__video" src="images/video/long-video.webm" autoplay loop></video>
+  <video class="video-bg__video" src="images/video/long-video.mp4" autoplay loop></video>
   <div class="top-section__under-video">&nbsp;</div>
   <div class="top-section__band">
     <div class="row align-center">
