--- a/source/team.html
+++ b/source/team.html
@@ -227,5 +227,29 @@ title: Team | Data Collaboratives
         </div>
       </div>
     </div>
+    <div class="divider">
+      <h1>Acknowledgments</h1>
+    </div>
+    <div class="row">
+      <div class="small-11 small-centered medium-10 medium-offset-1 columns team-page__acknowledgments">
+        <p><b>The site reflects the accumulation of all the insights and input we received from many over the last few years for which we are grateful. In particular, we would like to thank:</b></p>
+        <ul class="team-page__list">
+          <li>Anoush Rima (née Tatevossian), John Crowley, Mila Romanoff and Robert Kirkpatrick, <em>UN Global Pulse</em></li>
+          <li>Manuel Garcia Herranz, <em>UNICEF</em></li>
+          <li>Alex Rutherford, <em>UNICEF</em></li>
+          <li>Ciro Cattu, <em>ISI Foundation</em></li>
+          <li>Michele Tizzoni, <em>ISI Foundation</em></li>
+          <li>Daniela Paolotti, <em>ISI Foundation</em></li>
+          <li>Matt Stempeck and John Paul Farmer, <em>Microsoft</em></li> 
+          <li>Jos Berens, Ulrich Mans and Gideon Shimson, <em>University of Leiden, The Hague</em></li>
+          <li>Sarah Telford, Mark Dalton and Lilian Barajas, <em>UNOCHA</em></li>
+          <li>William Hoffman, <em>World Economic Forum</em></li>
+          <li>Neil Britto, <em>InterSector Project</em></li> 
+          <li>The members and partners of the <a href="http://www.responsible-data.org/"><em>International Responsible Data Group</em></a></li>
+          <li>The members of the <a href="http://www.opening-governance.org/"><em>MacArthur Research Network of Opening Governance</em></a></li>
+        </ul>
+      </div>
+    </div>
   </div>
+
 </div>
