--- a/source/index.html
+++ b/source/index.html
@@ -134,7 +134,7 @@ subtitle:
     <div class="column large-6">
       <div class="checkerboard__content">
         <h6 class="checkerboard__header">Designing a Data Collaborative</h6>
-        <p class="checkerboard__main">How can institutions establish Data Collaboratives to the end of unlocking previously inaccessible data to the end of solving public problems? Our <strong>Data Collaboratives Guide</strong> outlines <strong>8 Phases</strong> for designing and implementing a Data Collaborative, complete with examples, enablers and resources to improve outcomes.</p>
+        <p class="checkerboard__main">How can institutions establish Data Collaboratives and unlock previously inaccessible data to the end of solving public problems? Our <strong>Data Collaboratives Guide</strong> outlines <strong>8 Phases</strong> for designing and implementing a Data Collaborative, complete with examples, enablers and resources to improve outcomes.</p>
         <p class="checkerboard__footer"><a href="{{ '/canvas.html' | relative_url }}" class="button  button--outline-dark">More</a></p>
       </div>
     </div>
