--- a/source/index.html
+++ b/source/index.html
@@ -69,7 +69,7 @@ subtitle:
         <h4>There are six main types of Data Collaboratives:</h4>
         <div class="row collapse">
           <div onmouseover="this.style.cursor='pointer';" class="large-6 column data-pooling">
-            <div class="icon-box">alt=""
+            <div class="icon-box">
               <img src="/images/icons/icons_03.png" alt="icon 3" >
               <p>Data Cooperatives or Pooling</p>
             </div>
