Fix material icons on IE, remove default firefox select elements

--- a/source/explorer.html
+++ b/source/explorer.html
@@ -119,7 +119,7 @@ custom_js: listScripts.js
 
             <span class="table-sortable__control table-sortable__control--simple js-open-table-search" data-target="#case__title--input"><i class="material-icons">search</i></span>
 
-            <span class="table-sortable__control table-sortable__control--simple sort" data-sort="case__title"><i class="material-icons">keyboard_arrow_down</i></span>
+            <span class="table-sortable__control table-sortable__control--simple sort" data-sort="case__title"><i class="material-icons">&#xE313;</i></span>
           </div>
 
           <form class="table-sortable__search ">
@@ -132,27 +132,27 @@ custom_js: listScripts.js
         <th class="table-sortable__head-cell case__type">
           <span>Type</span>
           <div class="table-sortable__control-group">
-            <span class="table-sortable__control table-sortable__control--simple sort" data-sort="case__type"><i class="material-icons">keyboard_arrow_down</i></span>
+            <span class="table-sortable__control table-sortable__control--simple sort" data-sort="case__type"><i class="material-icons">&#xE313;</i></span>
           </div>
         </th>
 
         <th class="table-sortable__head-cell case__sector">
           <span>Sector</span>
           <div class="table-sortable__control-group">
-            <span class="table-sortable__control table-sortable__control--simple sort" data-sort="case__sector"><i class="material-icons">keyboard_arrow_down</i></span>
+            <span class="table-sortable__control table-sortable__control--simple sort" data-sort="case__sector"><i class="material-icons">&#xE313;</i></span>
           </div>
         </th>
 
         <th class="table-sortable__head-cell case__data-type">
           <span>Data Type</span>
           <div class="table-sortable__control-group">
-            <span class="table-sortable__control table-sortable__control--simple sort" data-sort="case__data-type"><i class="material-icons">keyboard_arrow_down</i></span>
+            <span class="table-sortable__control table-sortable__control--simple sort" data-sort="case__data-type"><i class="material-icons">&#xE313;</i></span>
           </div>
         </th>
         <th class="table-sortable__head-cell case__region">
           <span>Region</span>
           <div class="table-sortable__control-group">
-            <span class="table-sortable__control table-sortable__control--simple sort" data-sort="case__region"><i class="material-icons">keyboard_arrow_down</i></span>
+            <span class="table-sortable__control table-sortable__control--simple sort" data-sort="case__region"><i class="material-icons">&#xE313;</i></span>
           </div>
         </th>
       </thead>
