Add project modal

--- a/source/projects.html
+++ b/source/projects.html
@@ -75,6 +75,7 @@ project_js: projects.js
                 </span>
               </div>
 
+              {% include projects-modal.html %}
 
             </div>
           {% endfor %}
