--- a/source/index.html
+++ b/source/index.html
@@ -156,3 +156,22 @@ subtitle:
     </div>
   </div>
 </section>
+
+<div id="sticky-code">
+  <div class="sticky js-target-sticky js-active">
+    <div class="row">
+        <div class="column small-12">
+            <i class="material-icons sticky__close js-close-sticky">close</i>
+            <div class="row">
+              <div class="columns large-3">
+                <img class="sticky__image" src="/images/unicef-cover.png" alt="">
+              </div>
+              <div class="columns">
+                <h3 class="sticky__title">Data Collaboratives to Improve Children’s Lives</h3>
+                <p>How do you solve complex problems affecting the world’s children using data? <a href="{{ '/improving-childrens-lives.html' | relative_url }}">Learn more</a></p>
+              </div>
+            </div>
+        </div>
+    </div>
+  </div>
+</div>
